--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.1.0-beta.12",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "three": "^0.132.2",
     "vue": "^3.0.5",
-    "vue-router": "^3.5.2"
+    "vue-router": "^4.0.0-beta.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
